--- a/SoniaEasyPOS/Web.API/appsettings.Development.json
+++ b/SoniaEasyPOS/Web.API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlServer": "Server=localhost;Database=easyposdb;User Id=sa;Password=Admin123$;Encrypt=false"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
